# tradecat

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Makefile  PERFORMANCE_AUDIT_TRADING_SERVICE.md  README.md  README_EN.md  TODO.md  ai-analysis-BTCUSDT-20260118-183758.txt  polymarket-report-2026-01-19-local.csv  polymarket-report-2026-01-19.csv  pyproject.toml  审计1.md
services-preview/datacat-service/: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.lock.txt  requirements.txt
services-preview/datacat-service/data/: alpha_tokens.json
services-preview/datacat-service/scripts/: benchmark_collectors.py  health_check.py  run_backfill_once.sh  run_metrics_24h.sh  run_ws_24h.sh  runtime_baseline.py  start.sh  test_rate_limit.py  test_ws_reconnect.py  validate_samples.py
services-preview/datacat-service/src/: __init__.py  __main__.py  config.py
services-preview/datacat-service/src/adapters/: README.md
services-preview/datacat-service/src/collectors/: README.md
services-preview/datacat-service/src/collectors/binance/um_futures/all/backfill/pull/file/klines/: http_zip.py
services-preview/datacat-service/src/collectors/binance/um_futures/all/backfill/pull/file/metrics/: http_zip.py
services-preview/datacat-service/src/collectors/binance/um_futures/all/backfill/pull/rest/klines/: ccxt.py
services-preview/datacat-service/src/collectors/binance/um_futures/all/backfill/pull/rest/metrics/: http.py
services-preview/datacat-service/src/collectors/binance/um_futures/all/realtime/pull/rest/metrics/: http.py
services-preview/datacat-service/src/collectors/binance/um_futures/all/realtime/pull/rest/metrics/interval_5m/http/: collector.py
services-preview/datacat-service/src/collectors/binance/um_futures/all/realtime/push/ws/klines/: cryptofeed.py
services-preview/datacat-service/src/collectors/binance/um_futures/all/realtime/push/ws/klines/interval_1m/cryptofeed/: collector.py
services-preview/datacat-service/src/collectors/binance/um_futures/all/sync/pull/rest/alpha/: http.py
services-preview/datacat-service/src/orchestration/: README.md
services-preview/datacat-service/src/pipeline/: README.md  json_sink.py
services-preview/datacat-service/src/runtime/: __init__.py  errors.py  logging_utils.py
services-preview/datacat-service/tasks/: ADAPTER-DECISION.md  BUGFIX-PLAN.md  BUGFIX-TODO.md  CONFIG-MATRIX.md  DEPENDENCY-CHANGELOG.md  IMPLEMENTATION-ANALYSIS-ULTRA.md  JSON-SINK-PLAN.md  LOGGING-SPEC.md  OLD-SERVICE-INVENTORY.md  PLAN.md  PRODUCTION-READINESS-PLAN.md  PRODUCTION-READINESS-STATUS.md  PRODUCTION-READINESS-TODO.md  REFACTOR-PLAN-ULTRA.md  REFACTOR-TODO-ULTRA.md  STRUCTURE-AUDIT.md  TODO.md  VALIDATION-STATUS.md  benchmark-report.md  bugfix-01-backfill-decouple.md  bugfix-02-proxy-fallback.md  bugfix-03-lockfile.md  bugfix-04-alpha-entry.md  health-check-report.json  runtime-baseline.md  task-01-01-scan-files.md  task-01-02-dependency-graph.md  task-01-03-mapping-table.md  task-01-inventory.md  task-02-01-ws-wrapper.md  task-02-02-ws-internalize.md  task-02-03-ws-backfill-hook.md  task-02-ws-klines.md  task-03-01-metrics-wrapper.md  task-03-02-metrics-internalize.md  task-03-03-metrics-rate-limit.md  task-03-rest-metrics.md  task-04-01-gap-scanner.md  task-04-02-zip-klines.md  task-04-03-zip-metrics.md  (+34 more)
services-preview/predict-service/: pyproject.toml  requirements.txt
services-preview/predict-service/services/polymarket/: CHANGELOG.md  README.md  bot.js  bugs.jsonl  ecosystem.config.js  live-signal-monitor.js
services-preview/predict-service/services/polymarket/commands/: index.js
services-preview/predict-service/services/polymarket/config/: settings.js
services-preview/predict-service/services/polymarket/data/: translation-cache.json  users.json
services-preview/predict-service/services/polymarket/docs/: CSV_STATISTICS_LOGIC_SUMMARY.md
services-preview/predict-service/services/polymarket/i18n/: en.js  zh-CN.js
services-preview/predict-service/services/polymarket/scripts/: README_DEPRECATED.md  bot.sh  csv-report.js  daily-summary.js  polymarket.sh
services-preview/predict-service/services/polymarket/signals/closing/: detector.js
services-preview/predict-service/services/polymarket/translation/: google-service-free.js  mymemory-service.js
services-preview/predict-service/services/polymarket/utils/: globalProxy.js  marketData.js  proxyAgent.js
services-preview/vis-service/: pyproject.toml  requirements.lock.txt  requirements.txt
services-preview/vis-service/src/core/: settings.py
services-preview/vis-service/src/templates/: registry.py
services/ai-service/: README.md  pyproject.toml
services/ai-service/scripts/: start.sh
services/ai-service/src/: __main__.py  pipeline.py
services/ai-service/src/data/: fetcher.py
services/ai-service/src/llm/: client.py
services/ai-service/src/utils/: run_recorder.py
services/ai-service/tests/: test_pipeline.py
services/telegram-service/: Makefile  pyproject.toml  requirements.lock.txt  requirements.txt
services/telegram-service/locales/en/LC_MESSAGES/: bot.mo  bot.po
services/telegram-service/locales/zh_CN/LC_MESSAGES/: bot.mo  bot.po
services/telegram-service/scripts/: start.sh
services/telegram-service/src/bot/: ai_integration.py  app.py  env_manager.py  non_blocking_ai_handler.py  vis_handler.py
services/telegram-service/src/cards/: data_provider.py
services/telegram-service/src/cards/advanced/: CVD排行卡片.py  EMA排行卡片.py  K线形态排行卡片.py  MFI排行卡片.py  VPVR排行卡片.py  VWAP排行卡片.py  流动性排行卡片.py  超级精准趋势排行卡片.py  趋势线排行卡片.py
services/telegram-service/src/cards/basic/: KDJ排行卡片.py  MACD柱状排行卡片.py  OBV排行卡片.py  RSI谐波排行卡片.py  布林带排行卡片.py  成交量排行卡片.py  成交量比率排行卡片.py  支撑阻力排行卡片.py  资金流向卡片.py
services/telegram-service/src/cards/futures/: OI极值告警排行卡片.py  OI趋势排行卡片.py  OI连续性排行卡片.py  主动买卖比排行卡片.py  主动成交方向排行卡片.py  主动跳变排行卡片.py  主动连续性排行卡片.py  全市场情绪排行卡片.py  大户情绪排行卡片.py  市场深度卡片.py  情绪分歧排行卡片.py  情绪动量排行卡片.py  持仓增减速排行卡片.py  持仓排行卡片.py  期货持仓情绪排行卡片.py  波动度排行卡片.py  翻转雷达排行卡片.py  资金费率卡片.py  风险拥挤度排行卡片.py
services/telegram-service/src/signals/: adapter.py  ui.py
(+372 files in other folders)
