[project]
name = "tradecat"
version = "1.0.0"
description = "Toy-level data analysis and trading platform"
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".venv",
    "__pycache__",
    ".git",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # line too long (handled by formatter)
    "F401",  # unused import (often intentional in __init__.py)
    "F403",  # star imports
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"**/tests/**" = ["F401", "F811"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [
    ".venv",
    "__pycache__",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]
