[project]
name = "vis-service"
version = "0.1.0"
description = "Visualization rendering service for TradeCat - K-line charts, indicators, VPVR"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.20.0",
    "mplfinance>=0.12.10b0",
    "diskcache>=5.6.3",
    "python-dotenv>=1.0.0",
    "adjustText>=0.8",
    "joypy>=0.2.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "httpx"]

[project.scripts]
vis-service = "src.main:run_server"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
