[project]
name = "telegram-service"
version = "1.0.0"
description = "Telegram Bot service for TradeCat - rankings, signals, and AI analysis"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=20.0",
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[project.scripts]
telegram-service = "src.bot.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
